# MangaDL--CPP-GUI-Version-

./: Makefile  Makefile.testing  README.md  TEST  TODO  gui.cpp  mangaDL_x86  mangaDL_x86_64  meson.build  t.cpp  testing.cpp  testing6.cpp  testing_mgfox.cpp
manager/: config.db  config.hpp  mgpark.hpp  mgreader.hpp  mgstatus.hpp
manager/Browser/: Browser.hpp  regex.hpp
manager/browser/: browser.cpp  browser.hpp  regex.hpp
manager/cfg/: config.cpp  config.db  config.hpp
manager/dlder/: .dlder.cpp.swp  .dlder.hpp.swp  dl_facto.cpp  dl_facto.hpp  dlder.cpp  dlder.hpp
manager/dlder/provider/: .mgreader.cpp.swp  .mgreader.hpp.swp  mgfox.cpp  mgfox.hpp  mgpark.cpp  mgpark.hpp  mgreader.cpp  mgreader.hpp  webtoons.cpp  webtoons.hpp
manager/gui/: gui.cpp  gui.hpp
manager/gui/callbacks/: callbacks.hpp
